# impulse

./: .editorconfig  .gitignore  BUILD_GUIDE.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.cargo/: config.toml
.github/: pull_request_template.md
doc/: ai-coding-assistants.md
gradle/: libs.versions.toml
impulse-api/: build.gradle.kts
impulse-bullet/: build.gradle.kts
impulse-core/: .gitignore  README.md  build.gradle.kts
impulse-native-bridge/: CMakeLists.txt  Cargo.toml  build.gradle.kts  protocol.md
impulse-native-bridge/dispatch_macros/: Cargo.toml
impulse-native-bridge/dispatch_macros/src/: lib.rs
impulse-native-bridge/ffi-dispatch-macros/: Cargo.toml
impulse-native-bridge/ffi-dispatch-macros/src/: lib.rs
impulse-native-bridge/impulse-ffi/: Cargo.toml  build.rs  cbindgen-java.toml
impulse-native-bridge/impulse-ffi/include/: engine_api.h  internal_bridge.h
impulse-native-bridge/impulse-ffi/include/engine/: adapter.h  body.h  common.h  joint.h  space.h
impulse-native-bridge/impulse-ffi/src/: ffi_engine.rs  lib.rs
impulse-native-bridge/impulse-ffi/src/ffi_internal/: mod.rs
impulse-native-bridge/impulse-ffi/src/ffi_internal/commands/: body.rs  engine.rs  joint.rs  space.rs
impulse-native-bridge/include/: java_bridge.h
impulse-native-bridge/include/engine/: joint.h  space.h
impulse-native-bridge/native_bridge/: Cargo.toml  build.rs
impulse-native-bridge/native_bridge/src/: lib.rs
impulse-native-bridge/native_bridge/src/dispatch/: engine_state.rs  mod.rs
impulse-native-bridge/native_bridge/src/dispatch/commands/: body.rs  engine.rs  joint.rs  space.rs
impulse-native-bridge/native_bridge/src/java_bridge/: mod.rs
impulse-native-bridge/src/main/C/: inb_body.h  inb_bridge.h  inb_common.h  inb_defaults.c  inb_defaults.cpp  inb_joint.h  inb_space.h
impulse-native-bridge/src/main/include/: inb_body.h  inb_bridge.h  inb_joint.h  inb_pch.h  inb_space.h  pch.h
impulse-native-bridge/src/main/include/engine/: body.h  engine_adapter.h  engine_common.h  engine_pch.h  joint.h  space.h
impulse-native-bridge/src/main/include/impulse/: impulse_bridge.h
impulse-native-bridge/src/main/java/dev/hytalemodding/: NativeBackend.java  NativeBridgeHandler.java
impulse-rapier/src/main/rust/: Cargo.toml
impulse-rapier/src/main/rust/patches/: rapier3d-0.32.0-simd-body-masks.patch
impulse-rapier/src/main/rust/scripts/: prepare-rapier-patched.ps1  prepare-rapier-patched.sh
impulse-rapier/src/main/rust/src/: body_exports.rs  joint_exports.rs  lib.rs  query_exports.rs  space_exports.rs  voxel_exports.rs
(+1020 files in other folders)
