[package]
name = "impulse-rapier-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "impulse_rapier"
crate-type = ["cdylib"]

[features]
# Rapier 0.32's SIMD contact-manifold grouping can panic on dense 10k
# body-body piles after island splitting leaves active contacts spanning islands.
# Keep it opt-in until that path is proven stable for full-collision stress.
rapier-simd-stable = ["rapier3d/simd-stable"]

[dependencies]
jni = "0.21"
rapier3d = { version = "0.32.0", default-features = false, features = ["dim3", "f32", "parallel", "profiler"] }

[profile.release]
codegen-units = 1
