[package]
name = "impulse-rapier-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "impulse_rapier"
crate-type = ["cdylib"]

[features]
rapier-simd-stable = ["rapier3d/simd-stable"]

[dependencies]
jni = "0.21"
rapier3d = { version = "0.32.0", default-features = false, features = ["dim3", "f32", "parallel", "profiler"] }

[profile.release]
codegen-units = 1
